se agrego un padding en los td

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,20 +16,21 @@
 .layout-column {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  
 }
 
 .layout-row {
   display: flex;
   flex-direction: row;
-  margin-left: 0px;
 }
 
 .width-100 {
   width: 100%;
 }
 
-.margin-body{
-    margin-right: 20px;
+.margin-body {
+  margin-right: 20px;
 }
 /****************************
  Barra de navegación     
@@ -73,32 +74,40 @@ nav button {
   color: var(--color-primario);
 }
 
-.container-boxes{
-    display: flex;
-    justify-content: flex-end;
+.title{
+    font-family: 'Montserrat', sans-serif;
+
 }
 /****************************
  info pokemon
 ****************************/
 
 .container-info {
-  background-color: var(--color-secundario);
-  margin: 5%;
+  /**background-color: var(--color-secundario);**/
   width: 500px;
   height: 400px;
 }
 
 .container-img {
-  background-color: var(--color-secundario);
-  margin: 5%;
-  align-items: center;
-  width: 500px;
-  height: 400px;
+  background-image: url("../assets/img/blob\ \(1\).svg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
+.poke-img{
+position: relative;
+top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
 table {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Fredoka", sans-serif;
   color: black;
 }
-table td {
+table  td{
+ padding: 0.76rem;
+}
+table tr td{
   width: 50%;
 }
