--- a/styles/main.css
+++ b/styles/main.css
@@ -86,9 +86,9 @@ nav button {
 
 .pokemon-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr ;
   gap: 30px;
-  width: 80%;
+  width: 99%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 40px;
