--- a/styles/main.css
+++ b/styles/main.css
@@ -10,8 +10,8 @@
 }
 
 :root {
-  --color-primario: #81c784;
-  --color-secundario: #5f9362;
+  --color-primario: #ffffff;
+  --color-secundario: #cccccc;
 }
 .layout-column {
   display: flex;
@@ -62,6 +62,8 @@ nav button {
   position: absolute;
   padding: 20px;
   background-color: var(--color-primario);
+  box-shadow: 0 3px 15px rgba(100, 100, 100, 0.1);
+
 }
 
 .search-bar {
@@ -174,7 +176,32 @@ nav button {
   }
 }
 
+/****************************
+ ventana modal
+****************************/
 
+.modal{
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: #111111bd;
+  opacity: 0;
+  pointer-events: none;
+
+}
+
+.modal-container{
+  margin: auto;
+  width: 90%;
+  background-color: #fff;
+}
+
+.modal--show{
+  opacity: 1;
+  pointer-events: unset;
+}
 
 /****************************
  info pokemon
@@ -185,6 +212,12 @@ nav button {
   width: 100%;
   height: 100%;
 
+}
+.pokemon-page{
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+  background-color: black;
 }
 
 .container-info {
