--- a/styles/main.css
+++ b/styles/main.css
@@ -180,27 +180,77 @@ nav button {
  ventana modal
 ****************************/
 
-.modal{
-  position: fixed;
+.page{
+  background: url(img/foto.jpg) center;
+  height: 95vh; 
+  display: flex;          
+  justify-content: center;
+  align-items: center;
+}
+.fondo_transparente{
   top: 0;
-  right: 0;
   left: 0;
-  bottom: 0;
-  background-color: #111111bd;
-  opacity: 0;
-  pointer-events: none;
+  background: rgba(0, 0, 0, 0.226);
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  display: none;
+}
+.modal{
+  background: linear-gradient(0deg,white 70%, crimson 30%);
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 
 }
-
-.modal-container{
-  margin: auto;
-  width: 90%;
-  background-color: #fff;
+.modal_cerrar{
+  background: white;
+  position: absolute;
+  right: 12px;
+  color: crimson;
+  top: 6px;
+  width: 40px;
+  height: 40px;
+  border-radius: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.modal_titulo{
+  color: white;
+  font-size: 40px;
+}
+.modal_mensaje{            
+ padding: 10px 30px;
+}
+.modal_botones{      
+  width: 100%;    
+ background: whitesmoke;
+ border-top:whitesmoke 1px;
+ padding-top: 20px;
+ display: flex;
+ justify-content: space-evenly;
 }
 
-.modal--show{
-  opacity: 1;
-  pointer-events: unset;
+.boton{
+  background: white;
+  padding: 8px 30px;
+  color: crimson;
+  text-decoration: none;
+  border-radius: 25px;
+  border:1px solid crimson
+}
+.boton:hover{
+  background: crimson;
+  color: white;
 }
 
 /****************************
